--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{
+{"homepage":"https://dharshinisri2005.github.io/react-meter",
   "name": "nutrition-app",
   "version": "0.1.0",
   "private": true,
